--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,11 +1,34 @@
+# Core dependencies
 numpy>=1.21.0
 scipy>=1.7.0
-qiskit>=0.34.2
-torch>=1.9.0
-pandas>=1.3.0
-matplotlib>=3.4.0
 pytest>=6.2.5
-sphinx>=4.0.2
-flake8>=3.9.0
-black>=21.5b2
+dataclasses>=0.8; python_version < '3.7'
+
+# Quantum computing
+qiskit>=0.34.2
+cirq>=0.13.0
+
+# AI and ML
+torch>=1.9.0
+transformers>=4.11.3
+
+# Utilities
+tqdm>=4.62.3
+matplotlib>=3.4.3
+pandas>=1.3.3
+
+# Development dependencies
+pytest-cov>=2.12.1
+black>=21.9b0
+flake8>=3.9.2
 mypy>=0.910
+isort>=5.9.3
+
+# Documentation
+sphinx>=4.2.0
+sphinx-rtd-theme>=1.0.0
+nbsphinx>=0.8.7
+jupyter>=1.0.0
+
+# Type checking
+typing-extensions>=3.10.0; python_version < '3.8'
